# filtrum

./: Cargo.toml  README.md
filtrum-derive/: Cargo.toml
filtrum-derive/src/: lib.rs
src/: axum.rs  common.rs  equal_filter.rs  errors.rs  filter_id.rs  lib.rs  limit.rs  number_filter.rs  order_by.rs  query_filter.rs  regex.rs  skip.rs  sqlx.rs  string_filter.rs
tests/: axum_tests.rs  derive_tests.rs  integration_tests.rs  sqlx_tests.rs
